--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,6 +7,7 @@ nav {
   color:white;
   height:70px;
   line-height:70px;
+  font-family: 'Inconsolata', monospace;
 }
 
 nav ul a{
@@ -21,17 +22,44 @@ nav ul a{
 h1 {
   margin:0;
   padding-left:50px;
+  font-family: 'PT Mono', monospace;
+  font-weight:bold;
+}
+
+h2 {
+  margin: 10px;
+  font-family: 'PT Mono', monospace;
+  font-size: 2.7em;
+  font-weight: bold;
 }
 .container {
   width:90%;
 }
 
 .bookList, .bookInfo{
-
-  background: rgba(177, 187, 204,0.8);
+  background: rgba(220, 223, 229,0.9);
   margin:20px;
   min-height:450px;
   text-align:center;
   border-radius:20px;
   padding:10px;
+  font-family: 'Inconsolata', monospace;
+  font-weight: bold;
+  font-size: 1.1em;
+
+}
+
+.bookInfo p {
+    margin: 8px;
+}
+
+td, tr {
+    padding: 5px;
+    font-weight: bold;
+    text-align:center;
+}
+
+.book:hover {
+  background:white;
+  cursor:pointer;
 }
