Updated styles.css for discussion.html. Added html, frontend js, chatModel, and discussion-api-routes.js in preparation for integrating with databases. Routes and chat model not functional yet.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,7 +36,7 @@ h2 {
   width:90%;
 }
 
-.bookList, .bookInfo{
+.bookList, .bookInfo, .discussions{
   background: rgba(220, 223, 229,0.9);
   margin:20px;
   min-height:450px;
