--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,7 +36,7 @@ h2 {
   width:90%;
 }
 
-.bookList, .bookInfo, .discussions{
+.bookList, .bookInfo, .discussions, .groups {
   background: rgba(220, 223, 229,0.9);
   margin:20px;
   min-height:450px;
@@ -62,4 +62,8 @@ td, tr {
 .book:hover {
   background:white;
   cursor:pointer;
+}
+
+.btn {
+  margin-left: 2px;
 }
