--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -89,3 +89,39 @@ td, tr {
 #member-modal, #groups-modal {
   overflow: visible;
 }
+
+/* discovery page */
+
+
+.discover {
+    background-image: url("http://sprint.no/wp-content/uploads/2015/03/Book.gif");
+    
+    /* Full height */
+    height: 100%; 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.container-cards {
+  width:80%;
+
+}
+
+#search{
+  width: 60%;
+}
+
+.card content{
+   background-color: #cec9c9;
+}
+div.card.medium{
+
+    background-color: #cec9c9;
+
+}
+.material-icons.left{
+  margin-right: 8px;
+}
