updates using Passport

--- a/views/discussions.ejs
+++ b/views/discussions.ejs
@@ -19,10 +19,10 @@
     <div class="nav-wrapper">
     <a href="library.html" class="brand-logo"><h1>Dewey.</h1></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="library.html" id="libraryPage">My Library</a></li>
-        <li><a href="groups.html">Groups</a></li>
-        <li><a href="discover.html">Discover</a></li>
-        <li><a href="login.html" id="logout">Log Out</a></li>
+        <li><a href="/library" id="libraryPage">My Library</a></li>
+        <li><a href="/groups">Groups</a></li>
+        <li><a href="/discover">Discover</a></li>
+        <li><a href="/logout" id="logout">Log Out</a></li>
       </ul>
     </div>
   </nav>
