--- a/views/library.ejs
+++ b/views/library.ejs
@@ -12,9 +12,6 @@
 </head>
 
 <body class="library load">
-<!--   <header>
-    <h1>Dewey</h1>
-  </header> -->
 
 <div>
   <!-- Navigation Bar -->
@@ -22,10 +19,10 @@
     <div class="nav-wrapper">
     <a href="library.html" class="brand-logo"><h1>Dewey.</h1></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="library.html" id="libraryPage">My Library</a></li>
-        <li><a href="groups.html">Groups</a></li>
-        <li><a href="discover.html">Discover</a></li>
-        <li><a href="login.html" id="logout">Log Out</a></li>
+        <li><a href="/library" id="libraryPage">My Library</a></li>
+        <li><a href="/groups">Groups</a></li>
+        <li><a href="/discover">Discover</a></li>
+        <li><a href="/logout" id="logout">Log Out</a></li>
       </ul>
     </div>
   </nav>
@@ -35,7 +32,7 @@
     <div class="row">
       <div class="col s4">
         <div class="bookList">
-          <h2>My Bookshelf</h2>
+          <h2><%= user.name %>'s Bookshelf</h2>
           
           <a class="btn" id="viewBooks">View Books</a>
           <!-- Modal Trigger -->
