--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -28,19 +28,22 @@
       <div class="col s3"></div>
       <div class="col s6">
           <div class="login">
-            <h2>Login</h2>
-              <form action="/login" method="post">
+            <h2>Sign up</h2>
+              <form action="/signup" method="post">
                   <div>
-                      <label>Username:</label>
+                      <label>Email:</label>
                       <input type="text" name="username"/>
                   </div>
                   <div>
-                      <label>Password:</label>
-                      <input type="password" name="password1"/>
+                      <label>Name:</label>
+                      <input type="text" name="name"/>
                   </div>
                   <div>
-                      <input type="submit" value="Log In"/>
-                      <a class="btn modal-trigger" href="#modal2" id="modalButton">New User</a>
+                      <label>Password:</label>
+                      <input type="password" name="password"/>
+                  </div>
+                  <div>
+                      <button type="submit">Signup</button>
                   </div>
               </form>
           </div>
@@ -49,39 +52,10 @@
   </div>
 </div>
 
-
-  <!-- Modal Structure -->
-<div id="modal2" class="modal">
-  <div class="modal-content form-group">
-    <form>
-      <div class="form-group">
-        <label>Email</label>
-        <input type="text" id="email" name="email">
-      </div>
-      <div class="form-group">
-        <label>Username</label>
-        <input type="text" id="username" name="username">
-      </div>
-      <div class="form-group">
-        <label>Password</label>
-        <input type="text" id="secret" name="secret">
-      </div>
-<!--       <label for="passwordCheck">Re-type your Password</label>
-      <br>
-      <input type="password" id="passwordCheck"> -->
-      <div class="modal-footer">
-        <a href="#!" class="modal-action modal-close btn-flat"  id="submitNewUser">Signup</a>
-      </div>
-    </form>
-  </div>
-  
-</div>
-
   <!-- Custom Script -->
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
-  <script type="text/javascript" src="js/library.js"></script>
 
 </body>
 </html>
