--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,6 +42,7 @@
                       <button type="submit">Login</button>
                   </div>
               </form>
+              <a href="/signup"><button type="submit">New User</button></a>
           </div>
       </div>
     </div>
