--- a/views/library.ejs
+++ b/views/library.ejs
@@ -32,7 +32,7 @@
   <div class="row">
     <div class="col s4">
       <div class="bookList">
-        <h2><%= user.name %>'s Bookshelf</h2>
+        <h2 id="usernameTest"><%= user.name %>'s Bookshelf</h2>
         
         <a class="btn" id="viewBooks">View Books</a>
         <!-- Modal Trigger -->
