server.js - uncommented api routes for users, groups, and discussions. passport.js - added password as criteria for acceptable login. without password, it's possible to login with just the correct email. models/group.js - uncommented Group associations models/user.js - uncommented User association for Group discussions.js - added firebase initialization, added function to get User name for chats, uncommented readDiscussions() for now to troubleshoot. discussion-api-routes.js - added /api/user route to get username of user that is logged in groups-api-routes - commented out firebase route. passport-routes - added user: req.user for group and discussions routes to get user's name to display in views All .ejs files - changed route from library.html to /library for correct routing for logo href. Changed group.ejs and discussion.ejs to display user's name. user-api-routes - added file for User routes

--- a/views/discussions.ejs
+++ b/views/discussions.ejs
@@ -17,7 +17,7 @@
   <!-- Navigation Bar -->
   <nav class="z-depth-0">
     <div class="nav-wrapper">
-    <a href="library.html" class="brand-logo"><h1>Dewey.</h1></a>
+    <a href="/library" class="brand-logo"><h1>Dewey.</h1></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="/library" id="libraryPage">My Library</a></li>
         <li><a href="/groups">Groups</a></li>
@@ -32,7 +32,7 @@
     <div class="row">
       <div class="col s10 offset-s1">
         <div class="discussions">
-          <h2>My Group Discussions</h2>
+          <h2><%= user.name %>'s Discussions</h2>
           
            <!-- Generate List of Discussions here and ability to open individual chats -->
           <div>
