--- a/views/discover.ejs
+++ b/views/discover.ejs
@@ -20,7 +20,7 @@
   <!-- Navigation Bar -->
   <nav class="z-depth-0">
     <div class="nav-wrapper">
-    <a href="library.html" class="brand-logo"><h1>Dewey.</h1></a>
+    <a href="/library" class="brand-logo"><h1>Dewey.</h1></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="/library" id="libraryPage">My Library</a></li>
         <li><a href="/groups">Groups</a></li>
