--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -18,7 +18,7 @@
   <!-- Navigation Bar -->
   <nav class="z-depth-0">
     <div class="nav-wrapper">
-    <a href="library.html" class="brand-logo"><h1>Dewey.</h1></a>
+    <a href="/library" class="brand-logo"><h1>Dewey.</h1></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="/library" id="libraryPage">My Library</a></li>
         <li><a href="/groups">Groups</a></li>
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="col s10 offset-s1">
                 <div class="groups">
-                    <h2>My Groups</h2>
+                    <h2><%= user.name %>'s Groups</h2>
                     <a class="waves-effect waves-light btn" href="#new-group-modal" id="create-group">Create New Group</a>
                     <a class="waves-effect waves-light btn" href="#groups-modal" id="join-groups">Join A Group</a>
 
@@ -87,7 +87,7 @@
 
     <div id="new-discussion-modal" class="modal">
         <div class="modal-content">
-            <h4>Creat a Discussion</h4>
+            <h4>Create a Discussion</h4>
             <form class="col s12">
                 <div class="row">
                     <div class="input-field col s8">
@@ -149,7 +149,7 @@
                         <div class="col s12"></div>
                     </div>
                     <a href="#!" class="modal-action modal-close waves-effect waves-light btn">Close</a>
-                    <a href="#!" class="wwaves-effect waves-light btn" id="add-user">Add</a>
+                    <a href="#!" class="waves-effect waves-light btn" id="add-user">Add</a>
                 </div>
             </form>
         </div>
