--- a/views/library.ejs
+++ b/views/library.ejs
@@ -28,18 +28,47 @@
 </nav>
 
 <!-- Container to create and show books -->
+
 <div class="container">
+  <div class="row">
+    <div class="col s3 about">
+      <div class="row">
+        <img id="profilePicture" src="../img/marissa.png" class="circle responsive-img">
+      </div>
+      <div class="row personalInfo">
+        <h2 id="personalName">Marissa Pels</h2>
+        <p id="personalFavorite">Favorite Book: The Power of One</p>
+        <p id="personalCurrent">Currently reading: You Don't Know JS</p>
+      </div>
+    </div>
+    <div class="col s1"></div>
+    <div class="col s8 bookList">
+    <h2><%= user.name %>'s Bookshelf</h2>
+      <a class="btn" id="viewBooks">View Books</a>
+      <a class="btn modal-trigger" href="#modal1" id="modalButton">Add a Book</a>
+      <table id="tableLibrary"></table>
+      <p id="chooseAuthor"></p>
+      <p id="chooseRate"></p>
+      <p id="chooseSummary"></p>
+      <p id="chooseComments"></p>
+      <img src="" id="chooseImage">
+    </div>
+  </div>
+</div>
+
+
+<!-- <div class="container">
   <div class="row">
     <div class="col s4">
       <div class="bookList">
-        <h2 id="usernameTest"><%= user.name %>'s Bookshelf</h2>
+        <h2><%= user.name %>'s Bookshelf</h2>
         
-        <a class="btn" id="viewBooks">View Books</a>
+        <a class="btn" id="viewBooks">View Books</a> -->
         <!-- Modal Trigger -->
-        <a class="btn modal-trigger" href="#modal1" id="modalButton">Add a Book</a>
+        <!-- <a class="btn modal-trigger" href="#modal1" id="modalButton">Add a Book</a> -->
 
         <!-- Append Book Info -->
-        <table id="tableLibrary"></table>
+     <!--    <table id="tableLibrary"></table>
       </div>
     </div>
     <div class="col s8">
@@ -55,7 +84,7 @@
     </div>
   </div>
 </div>
-
+ -->
 
 
   <!-- Modal Structure -->
