--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
-<body class="library">
+<body class="start">
 <div>
   <!-- Navigation Bar -->
   <nav class="z-depth-0">
