--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -122,7 +122,7 @@
                     <div class="row">
                         <div class="col s12"></div>
                     </div>
-                    <a href="#!" class="modal-action modal-close waves-effect waves-light btn">Close</a>
+                    <a href="#!" class="modal-action modal-close waves-effect waves-light btn" id="groups-modal-close">Close</a>
                     <a href="#!" class="waves-effect waves-light btn" id="add-groups">Join</a>
                 </div>
             </form>
