--- a/views/library.ejs
+++ b/views/library.ejs
@@ -46,7 +46,7 @@
     <h2><%= user.name %>'s Bookshelf</h2>
       <a class="btn" id="viewBooks">View Books</a>
       <a class="btn modal-trigger" href="#modal1" id="modalButton">Add a Book</a>
-      <table id="tableLibrary"></table>
+      <div id="tableLibrary"></div>
       <p id="chooseAuthor"></p>
       <p id="chooseRate"></p>
       <p id="chooseSummary"></p>
