--- a/views/library.ejs
+++ b/views/library.ejs
@@ -17,7 +17,7 @@
   <!-- Navigation Bar -->
 <nav class="z-depth-0">
   <div class="nav-wrapper">
-  <a href="library.html" class="brand-logo"><h1>Dewey.</h1></a>
+  <a href="/library" class="brand-logo"><h1>Dewey.</h1></a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href="/library" id="libraryPage">My Library</a></li>
       <li><a href="/groups">Groups</a></li>
@@ -41,8 +41,8 @@
         <p id="personalCurrent">Currently reading: You Don't Know JS</p>
       </div>
     </div>
-    <div class="col s1"></div>
-    <div class="col s8 bookList">
+    <!-- <div class="col s1"></div> -->
+    <div class="col s9 bookList">
     <h2><%= user.name %>'s Bookshelf</h2>
       <a class="btn" id="viewBooks">View Books</a>
       <a class="btn modal-trigger" href="#modal1" id="modalButton">Add a Book</a>
