--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
 <body class="start">
 <div>
   <!-- Navigation Bar -->
-  <nav class="z-depth-0">
+  <nav class="z-depth-0 initialNav">
     <div class="nav-wrapper">
     <a href="library" class="brand-logo"><h1>Dewey.</h1></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
