--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -14,7 +14,7 @@
 <body class="start">
 <div>
   <!-- Navigation Bar -->
-  <nav class="z-depth-0">
+  <nav class="z-depth-0 initialNav">
     <div class="nav-wrapper">
     <a href="library.html" class="brand-logo"><h1>Dewey.</h1></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -29,7 +29,7 @@
       <div class="col s6">
           <div class="login">
             <h2>Sign up</h2>
-              <form action="/signup" method="post">
+              <form action="/api/users" method="post">
                   <div>
                       <label>Email:</label>
                       <input type="text" name="username"/>
