--- a/views/library.ejs
+++ b/views/library.ejs
@@ -110,7 +110,7 @@
       <p id="chooseComments">Comments</p>
     </div>
     <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close btn-flat"  id="deleteBook">Delete</a>
+      <a href="#!" class="modal-action modal-close btn-flat"  id="deleteBook">Remove from Library</a>
       <a href="#!" class="modal-action modal-close btn-flat"  id="closeInfo">Close</a>
     </div>
   </div>
