--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -223,3 +223,10 @@ div.card.medium{
 .material-icons.left{
   margin-right: 8px;
 }
+
+.groupDiscBtn {
+  float: right;
+  margin: 4px;
+  background-color: #0277bd;
+  color: white;
+}
