--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -51,29 +51,32 @@
                 <div class="discussions">
                    <h2><%= user.name %>'s Discussions</h2> 
                    <div class="row showDiscussions">
-                    <div class="col s12">
+                    <div class="col s12 addDiscussion">
                       <ul class="tabs addTabs">
-                        <li id="no-discussion" class="tab"><a class="active" href="#newDiscussion"><i class="tiny material-icons">add</i></a></li>
+                        <li id="no-discussion" class="tab"><a class="active disc-btn" href="#newDiscussion"><i class="tiny material-icons">add</i></a></li>
                       </ul>
                       <!-- Create new discussions here -->
-                      <div id="newDiscussion" class="col s12">Create a New Discussion Here
-                        <form class="col s12">
-                            <div class="row">
-                                <div class="input-field col s8">
-                                    <i class="material-icons prefix">chat</i>
-                                    <input id="icon_prefix" type="text" class="validate userInp4">
-                                    <label for="icon_prefix" id="reset-input">Discussion Name</label>
-                                </div>
-                            </div>
-                            <div class="modal-footer">
+                      <!-- <span id="populate-chats">   -->
+<!--                           <div id="newDiscussion" class="col s12 populate-chat">Create a New Discussion Here
+                            <form class="col s12">
                                 <div class="row">
-                                    <div class="col s12"></div>
+                                    <div class="input-field col s8">
+                                        <i class="material-icons prefix">chat</i>
+                                        <input id="icon_prefix" type="text" class="validate userInp4">
+                                        <label for="icon_prefix" id="reset-input">Discussion Name</label>
+                                    </div>
                                 </div>
-                                <a href="#!" class="modal-action modal-close waves-effect waves-light btn" id="add-created-discussion">Create</a>
-                            </div>
-                        </form>
+                                <div class="modal-footer">
+                                    <div class="row">
+                                        <div class="col s12"></div>
+                                    </div>
+                                    <a href="#!" class="modal-action modal-close waves-effect waves-light btn" id="add-created-discussion">Create</a>
+                                </div>
+                            </form>
+                          </div> -->
+                      <!-- </span> -->
                       </div>
-                      </div>
+
                     </div>
                 </div>
             </div>
