--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -55,6 +55,9 @@
                       <ul class="tabs addTabs">
                         <li id="no-discussion" class="tab"><a class="active disc-btn" href="#newDiscussion"><i class="tiny material-icons">add</i></a></li>
                       </ul>
+                    <div class="addChats"></div>
+
+
                       <!-- Create new discussions here -->
                       <!-- <span id="populate-chats">   -->
 <!--                           <div id="newDiscussion" class="col s12 populate-chat">Create a New Discussion Here
