updates to image upload

--- a/views/library.ejs
+++ b/views/library.ejs
@@ -36,8 +36,8 @@
       <div class="row">
         <img id="profilePicture" src="../img/placeholder.png" class="circle responsive-img">
         <form action="/uploadpicture" method="POST" enctype="multipart/form-data">
-          <input type="file" name="upload" multiple>
-          <input class="btn btn-primary" type="submit" value="Upload">
+          <input id="uploadPic" type="file" name="upload" multiple>
+          <input class="btn btn-primary" id="uploadSubmit" type="submit" value="Upload">
         </form>
       </div>
       <div class="row personalInfo">
