--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -53,7 +53,7 @@
                    <div class="row showDiscussions">
                     <div class="col s12 addDiscussion">
                       <ul class="tabs addTabs">
-                        <li id="no-discussion" class="tab"><a class="active disc-btn" href="#newDiscussion"><i class="tiny material-icons">add</i></a></li>
+                        <li class="tab no-discussion"><a class="active disc-btn" href="#newDiscussion"><i class="tiny material-icons">add</i></a></li>
                       </ul>
                       <div class="addChats"></div>
                     </div>
