--- a/views/library.ejs
+++ b/views/library.ejs
@@ -34,7 +34,7 @@
   <div class="row">
     <div class="col s3 about">
       <div class="row">
-        <img id="profilePicture" src="../img/marissa.png" class="circle responsive-img">
+        <img id="profilePicture" src="../img/placeholder.png" class="circle responsive-img">
       </div>
       <div class="row personalInfo">
         <h2 id="personalName"><%= user.name %></h2>
